--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,6 @@ services:
       - RATE_LIMIT_MAX_REQUESTS_IN_WINDOW
     volumes:
       - ./.credentials.json:/app/.credentials.json
+    healthcheck:
+      test: curl -f http://localhost:3000/ || exit 1
+      timeout: 3s
